# QAOA-MIMO-QEC

./: LICENSE  README.md  pyproject.toml
examples/: plot_ber.py
src/qaoa_mimo_qec/: __init__.py  cli.py  experiments.py  mimo.py  qec.py  qubo.py  solvers.py
src/qaoa_mimo_qec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_qec.py
